# remoteprog

./: .gitignore  .gitmodules  Makefile  README.md  TODO.md  messages.proto  pico-pi-upload-client.sh  pico-pi-upload-server  pico-pi-upload-server.py  upload-usb.sh
circuit/remote-programmer/: .gitignore  converter.kicad_sch  remote-programmer.kicad_prl  remote-programmer.kicad_pro  remote-programmer.kicad_sch
client/: Makefile  client.cc  client.hh  interactive.cc  interactive.hh  lastcall.cc  lastcall.hh  main.cc  options.hh  request.cc  request.hh
protobuf/: comm.hh  messages.proto  protobuf.mk
server/: Makefile  firmware.cc  firmware.hh  llcomm.cc  llcomm.hh  main.cc  runner.cc  runner.hh  serial_terminal.cc  serial_terminal.hh  server.cc  server.hh  ui.cc  ui.hh
server/extra/: avrdude.conf  remoteprog.service
server/ssd1306/: font.h  ssd1306.c  ssd1306.h  twi.c  twi.h
temp/: Makefile  ui.cc
tests/: display.sh
tests/atmega328/: Makefile  main.c  uart.c
tests/pico/: CMakeLists.txt  test.c
